--- a/skills.html
+++ b/skills.html
@@ -6,9 +6,9 @@
     <body>
         <nav id="navbar">
             <a href="#about">About</a>
-            <a href="#projects">Projects</a>
+            <a href="index.html#projects">Projects</a>
             <a href="skills.html" target="_blank">Education <span style="color: red; font-size: 20px;">/</span> skills</a>
-            <a href="#contact">Contact</a>
+            <a href="index.html#contact">Contact</a>
         </nav>
     <div style="display: flex;
     justify-content: center;
