--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <nav id="navbar">
+    <nav class="navbar" id="navbar">
         <a href="#about">About</a>
         <a href="#projects">Projects</a>
         <a href="skills.html" target="_blank">Education <span style="color: red; font-size: 20px;">/</span> skills</a>
@@ -17,9 +17,9 @@
     </nav>
 
     <header id="about">
-        <h1>Hello!</h1>
+        <h1> <span>H</span> <em>e</em>  <span>l</span> <em>l</em> <span>o</span> !</h1>
         <p>My name is Ionasc Alexandru-Gabriel</p>
-        <p>And I am a web developer</p>
+        <p style="margin-left: 50px;" >And I am a web developer</p>
         <a href="#contact">Hire me</a>
     </header>
 
