--- a/skills.html
+++ b/skills.html
@@ -5,9 +5,9 @@
     </head>
     <body>
         <nav id="navbar">
-            <a href="#about">About</a>
+            <a href="index.html">About</a>
             <a href="index.html#projects">Projects</a>
-            <a href="skills.html" target="_blank">Education <span style="color: red; font-size: 20px;">/</span> skills</a>
+            <a href="index.html" target="_blank">Education <span style="color: red; font-size: 20px;">/</span> skills</a>
             <a href="index.html#contact">Contact</a>
         </nav>
     <div style="display: flex;
@@ -16,20 +16,20 @@
     height: 100vh;"> 
         <section>
             <ul>
-                <li style="border-bottom: none; font-size: 25px;">Education :</li>
-                <li style="border-bottom: none;">Universitatea Vasile Alecsandri</li>
-                <li>Specializare: Informatica</li>
-                <li><a href="https://www.freecodecamp.org/certification/ionasc/responsive-web-design" target="_blank" style="text-decoration: none; color: aqua;">Responsive Web Design Certification <i class="fab fa-free-code-camp"></i></a></li>
+                <li style="border-bottom: none; font-size: 25px; text-shadow: 2px 2px 8px #FF0000;">Education :</li>
+                <li style="border-bottom: none; text-shadow: 2px 2px 8px #FF0000;">Universitatea Vasile Alecsandri</li>
+                <li style="text-shadow: 2px 2px 8px #616804;">Specializare: Informatica</li>
+                <li style="text-shadow: 2px 2px 8px #bbbda8;"><a href="https://www.freecodecamp.org/certification/ionasc/responsive-web-design" target="_blank" style="text-decoration: none; color: aqua;">Responsive Web Design Certification <i class="fab fa-free-code-camp"></i></a></li>
             </ul>
         </section>
         <section>
         <ul>
-            <li style="border-bottom: none; font-size: 25px;">Programming Skills :</li>
-            <li>Html</li>
-            <li>CSS: Flexbox, Grid, Animations</li>
-            <li>Javascript: ES5, ES6, OOP, Dom manipulation, built in functions, working with arrays, strings and objects</li>
-            <li>Bootstrap</li>
-            <li> <a href="https://github.com/alex100588" target="_blank" style="color: rgb(31, 138, 45); text-decoration: none;"> Git <i class="fab fa-free-code-camp"></i></a></li>
+            <li style="border-bottom: none; font-size: 25px; text-shadow: 2px 2px 8px #FF0000;">Programming Skills :</li>
+            <li style="text-shadow: 2px 2px 8px #FF0000;">Html</li>
+            <li style="text-shadow: 2px 2px 8px #FF0000;">CSS: Flexbox, Grid, Animations</li>
+            <li style="text-shadow: 2px 2px 8px #FF0000;" >Javascript: ES5, ES6, OOP, Dom manipulation, built in functions, working with arrays, strings and objects</li>
+            <li style="text-shadow: 2px 2px 8px #FF0000;">Bootstrap</li>
+            <li> <a href="https://github.com/alex100588" target="_blank" style="color: rgb(31, 138, 45); text-decoration: none;text-shadow: 2px 2px 8px #FF0000;"> Git <i class="fab fa-free-code-camp"></i></a></li>
         </ul>
         </section>
     </div>
