--- a/index.html
+++ b/index.html
@@ -10,10 +10,21 @@
 </head>
 <body>
     <nav class="navbar" id="navbar">
-        <a href="#about">About</a>
-        <a href="#projects">Projects</a>
-        <a href="skills.html" target="_blank">Education <span style="color: red; font-size: 20px;">/</span> skills</a>
-        <a href="#contact">Contact</a>
+        <div class="logo">
+            <h4>My Logo</h4>
+        </div>
+        <ul class="nav-links">
+            <li><a href="#about">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="skills.html" target="_blank">Education</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+        <div class="burger">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
+        
     </nav>
 
     <header id="about">
@@ -62,7 +73,7 @@
         </ul>
     </div>
     </section>
-    <footer>Made with <i class="fas fa-heart"></i> by Alex</footer>
+    <footer>Made with <i class="fas fa-heart"></i> by Alex &copy;</footer>
 
     <script src="script.js"></script>
 </body>
