--- a/skills.html
+++ b/skills.html
@@ -4,11 +4,22 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     </head>
     <body>
-        <nav id="navbar">
-            <a href="index.html">About</a>
-            <a href="index.html#projects">Projects</a>
-            <a href="index.html" target="_blank">Education <span style="color: red; font-size: 20px;">/</span> skills</a>
-            <a href="index.html#contact">Contact</a>
+        <nav class="navbar" id="navbar">
+            <div class="logo">
+                <h4>My Logo</h4>
+            </div>
+            <ul class="nav-links">
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="skills.html" target="_blank">Education</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+            <div class="burger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+            
         </nav>
     <div style="display: flex;
     justify-content: center;
@@ -33,6 +44,8 @@
         </ul>
         </section>
     </div>
+
+    <script src="script.js"></script>
 </body>
 
 </html>
