--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <div>
         <ul class="social-ul">
             <li><a href="https://www.facebook.com/ionasc.gabriel/" target="_blank"><i class="fab fa-facebook"></i></a></li>
-            <li><a href="https://github.com/alex100588" target="_blank"><i class="fab fa-github"></i></a></li>
+            <li><a href="https://www.freecodecamp.org/certification/ionasc/responsive-web-design" target="_blank"><i class="fab fa-github"></i></a></li>
             <li><a href="https://www.freecodecamp.org/ionasc" target='_blank'><i class="fab fa-free-code-camp"></i></a></li>
         </ul>
     </div>
