--- a/skills.html
+++ b/skills.html
@@ -9,10 +9,10 @@
                 <h4>My Logo</h4>
             </div>
             <ul class="nav-links">
-                <li><a href="#about">About</a></li>
-                <li><a href="#projects">Projects</a></li>
+                <li><a href="index.html#about">About</a></li>
+                <li><a href="index.html#projects">Projects</a></li>
                 <li><a href="skills.html" target="_blank">Education</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="index.html#contact">Contact</a></li>
             </ul>
             <div class="burger">
                 <div class="line1"></div>
